# learn-opengl

./: CMakeLists.txt  README.md  shader.hpp
cmake/: FindGLM.cmake
hello-shader/: CMakeLists.txt  main.cpp
hello-texture/: CMakeLists.txt  main.cpp
hello-triangle/: CMakeLists.txt  main.cpp
include/: filesystem.h  shader.h
playground/: CMakeLists.txt  main.cpp
src/: glad.c
src/hello-shader/: main.cpp
src/hello-texture/: main.cpp  texture.vert
src/hello-transform/: main.cpp  transform.frag  transform.vert
src/hello-triangle/: main.cpp
src/playground/: main.cpp
